--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -496,7 +496,7 @@
                         </ul>
                         @if (userId != null)
                         {
-                            <a asp-controller="Auth" asp-action="LogOut" class="acc_dd_redbutton">Logout</a>
+                            <a href="/Auth/LogOut" class="acc_dd_redbutton">Logout</a>
                         }
                     </div>
                 </div>
