--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -47,6 +47,7 @@
     //profile
     --profile-activetab: #3e6e7a;
     --profile-post-color: #272727;
+    --tabrefresh-background-color: #2d2d2d;
     //----------
     //skeleton
     --postskeleton-itemcolor-start: #434343;
@@ -115,6 +116,7 @@
     //profile
     --profile-activetab: #32a1bc;
     --profile-post-color: #ffffff;
+    --tabrefresh-background-color: #dcdcdc;
     //----------
     //skeleton
     --postskeleton-itemcolor-start: #d1d5db;
