--- a/OmneFictio.Web/wwwroot/css/profile.css
+++ b/OmneFictio.Web/wwwroot/css/profile.css
@@ -297,8 +297,8 @@
   display: flex;
   font-size: 1.8rem;
 }
-.profile-tabs-cont .profile-tabs-mobile a,
-.profile-tabs-cont .profile-tabs-desktop a {
+.profile-tabs-cont .profile-tabs-mobile a[data-tab],
+.profile-tabs-cont .profile-tabs-desktop a[data-tab] {
   padding: 4px 8px;
   color: var(--text-color1);
   transition: background-color 0.1s ease;
@@ -306,8 +306,8 @@
   display: flex;
   align-items: center;
 }
-.profile-tabs-cont .profile-tabs-mobile a i,
-.profile-tabs-cont .profile-tabs-desktop a i {
+.profile-tabs-cont .profile-tabs-mobile a[data-tab] i,
+.profile-tabs-cont .profile-tabs-desktop a[data-tab] i {
   font-size: 1.6rem;
 }
 
@@ -317,7 +317,7 @@
   justify-content: space-evenly;
   gap: 6px 0;
 }
-.profile-tabs-mobile a.active {
+.profile-tabs-mobile a[data-tab].active {
   border-radius: 4px;
   background-color: var(--profile-activetab);
   color: #fff;
@@ -329,14 +329,32 @@
   gap: 6px 3%;
   font-size: 1.1rem;
 }
-.profile-tabs-desktop a:hover {
+.profile-tabs-desktop a[data-tab]:hover {
   border-bottom: 1px solid var(--text-color1);
 }
-.profile-tabs-desktop a span {
+.profile-tabs-desktop a[data-tab] span {
   font-size: 1.2rem;
 }
-.profile-tabs-desktop a.active {
+.profile-tabs-desktop a[data-tab].active {
   border-bottom: 1px solid var(--text-color1);
+  color: var(--text-color1);
+}
+.profile-tabs-desktop #refresh_ptab {
+  margin-left: auto;
+  padding: 4px 8px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  border-radius: 6px;
+  transition: background-color 0.1s ease;
+}
+.profile-tabs-desktop #refresh_ptab:hover {
+  background-color: var(--tabrefresh-background-color);
+}
+.profile-tabs-desktop #refresh_ptab i {
+  display: flex;
+  font-size: 1.3rem;
   color: var(--text-color1);
 }
 
