--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -21,6 +21,7 @@
   --navlink-aboutyou-color-hover: #6c5959;
   --navlink-others-color: #494152;
   --navlink-others-color-hover: #5f5a66;
+  --index-post-bg-color: #222222;
   --register-form-color: #404040;
   --register-input-color: #1d1d1d;
   --publish-form-color: #404040;
@@ -74,6 +75,7 @@
   --navlink-aboutyou-color-hover: #8d6767;
   --navlink-others-color: #9a90a6;
   --navlink-others-color-hover: #816f96;
+  --index-post-bg-color: #e5e5e5;
   --register-form-color: #f0f0f0;
   --register-input-color: #dcdcdc;
   --publish-form-color: #f0f0f0;
@@ -90,8 +92,8 @@
   --profile-activetab: #32a1bc;
   --profile-post-color: #ffffff;
   --tabrefresh-background-color: #dcdcdc;
-  --postskeleton-itemcolor-start: #d1d5db;
-  --postskeleton-itemcolor-end: #b9cdec;
+  --postskeleton-itemcolor-start: #313131;
+  --postskeleton-itemcolor-end: #858585;
   --commentskeleton-itemcolor-start: #d1d5db;
   --commentskeleton-itemcolor-end: #b9cdec;
   --profileskeleton-itemcolor-start: #d1d5db;
