--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -26,6 +26,8 @@
     --navlink-aboutyou-color-hover: #6c5959;
     --navlink-others-color: #494152;
     --navlink-others-color-hover: #5f5a66;
+    //index
+    --index-post-bg-color: #222222;
     //read
     //register
     --register-form-color: #404040;
@@ -95,6 +97,8 @@
     --navlink-aboutyou-color-hover: #8d6767;
     --navlink-others-color: #9a90a6;
     --navlink-others-color-hover: #816f96;
+    //index
+    --index-post-bg-color: #e5e5e5;
     //read
     //register
     --register-form-color: #f0f0f0;
@@ -119,8 +123,8 @@
     --tabrefresh-background-color: #dcdcdc;
     //----------
     //skeleton
-    --postskeleton-itemcolor-start: #d1d5db;
-    --postskeleton-itemcolor-end: #b9cdec;
+    --postskeleton-itemcolor-start: #313131;
+    --postskeleton-itemcolor-end: #858585;
     --commentskeleton-itemcolor-start: #d1d5db;
     --commentskeleton-itemcolor-end: #b9cdec;
     --profileskeleton-itemcolor-start: #d1d5db;
